@@ -1,5 +1,5 @@
 #
-# "$Id: cups.list.in,v 1.13.2.18 2003/04/22 21:09:22 mike Exp $"
+# "$Id: cups.list.in,v 1.13.2.19 2003/05/15 17:48:30 mike Exp $"
 #
 #   ESP Package Manager (EPM) file list for the Common UNIX Printing
 #   System (CUPS).
@@ -42,10 +42,13 @@
 %provides cupsys-client
 %provides cupsys-devel
 %provides libcups1
-%provides libcups.so.2
-%provides libcupsimage.so.2
 %provides libcupsys2
 %provides libcupsys2-dev
+
+%format rpm deb portable
+%provides libcups.so.2
+%provides libcupsimage.so.2
+%format all
 
 #
 # GNU variables...
@@ -405,5 +408,5 @@ f 0444 root sys $AMANDIR/man$MAN8DIR/lpmove.$MAN8EXT man/lpmove.man
 i 0555 root sys cups cups.sh
 
 #
-# End of "$Id: cups.list.in,v 1.13.2.18 2003/04/22 21:09:22 mike Exp $".
+# End of "$Id: cups.list.in,v 1.13.2.19 2003/05/15 17:48:30 mike Exp $".
 #
