@@ -3,7 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19
 
-	- cupsLangGet didn't use its language cache (STR #97)
+	- The cups.list file used file dependencies for package
+	  formats other than portable, RPM, and Debian (STR #98)
+	- cupsLangGet() didn't use its language cache (STR #97)
 	- "lpq -P" would segfault instead of showing a usage
 	  message (STR #94)
 	- Fixed compiler warnings in pdftops filter (STR #96)
